css/style.css
body {
    font: 14px / 1.5 'Helvetica Neue', helvetica, arial, sans-serif;
    margin: 0;
    padding: 0 0 2em;
    color: #222;
}

:root {
    --bg: #ffffff;
    --text: #222222;
    --header-bg: #eeeeee;
    --header-border: #dddddd;
    --panel-border: #cccccc;
    --footer-text: #666666;
    --input-bg: #ffffff;
    --input-border: #cccccc;
    --task-bg: #ffffff;
    --task-border: darkgoldenrod;
    --task-text: #222222;
    --overdue-bg: lightcoral;
    --overdue-border: darkred;
    --overdue-text: #ffffff;
    --stage-current: rgba(255, 140, 0, 0.2);
    --stage-ongoing: rgba(127, 255, 212, 0.2);
    --stage-backlog: rgba(100, 149, 237, 0.2);
    --menu-bg: #111111;
    --menu-link: #818181;
    --menu-link-hover: #f2f2f2;
    --menu-text: #d9d9d9;
    --button-text: #ffffff;
    --button-bg: lightgreen;
    --button-border: darkolivegreen;
    --button-delete-bg: coral;
    --button-delete-border: indianred;
    --button-cancel-bg: dodgerblue;
    --button-cancel-border: darkblue;
}

body.theme-default {
    --bg: #ffffff;
    --text: #222222;
}

body.theme-dark {
    --bg: #14191f;
    --text: #e7edf3;
    --header-bg: #1f2630;
    --header-border: #2a3440;
    --panel-border: #334150;
    --footer-text: #9cb0c3;
    --input-bg: #0f141a;
    --input-border: #3a4756;
    --task-bg: #1c2430;
    --task-border: #4b89c2;
    --task-text: #e7edf3;
    --stage-current: rgba(255, 153, 51, 0.18);
    --stage-ongoing: rgba(36, 170, 152, 0.18);
    --stage-backlog: rgba(79, 129, 189, 0.2);
    --menu-bg: #0c1016;
    --menu-link: #9fb1c6;
    --menu-link-hover: #ffffff;
    --menu-text: #d2deea;
    --button-bg: #4a8f4f;
    --button-border: #2b5b2f;
    --button-delete-bg: #c05850;
    --button-delete-border: #7d302d;
    --button-cancel-bg: #3f6fb1;
    --button-cancel-border: #274775;
}

body.theme-high-contrast {
    --bg: #000000;
    --text: #ffffff;
    --header-bg: #000000;
    --header-border: #ffffff;
    --panel-border: #ffffff;
    --footer-text: #ffffff;
    --input-bg: #000000;
    --input-border: #ffffff;
    --task-bg: #000000;
    --task-border: #ffff00;
    --task-text: #ffffff;
    --overdue-bg: #ff0000;
    --overdue-border: #ffffff;
    --overdue-text: #ffffff;
    --stage-current: rgba(255, 255, 0, 0.2);
    --stage-ongoing: rgba(0, 255, 255, 0.2);
    --stage-backlog: rgba(255, 0, 255, 0.2);
    --menu-bg: #000000;
    --menu-link: #ffffff;
    --menu-link-hover: #ffff00;
    --menu-text: #ffffff;
    --button-text: #000000;
    --button-bg: #00ff00;
    --button-border: #ffffff;
    --button-delete-bg: #ff8800;
    --button-delete-border: #ffffff;
    --button-cancel-bg: #00ccff;
    --button-cancel-border: #ffffff;
}

body.theme-ocean {
    --bg: #f2fbff;
    --text: #12344b;
    --header-bg: #dff3fb;
    --header-border: #b3dcea;
    --panel-border: #b3dcea;
    --footer-text: #3f6980;
    --input-bg: #ffffff;
    --input-border: #8ec2d4;
    --task-bg: #ffffff;
    --task-border: #2f7ea2;
    --task-text: #12344b;
    --stage-current: rgba(255, 177, 66, 0.2);
    --stage-ongoing: rgba(66, 170, 210, 0.22);
    --stage-backlog: rgba(91, 130, 245, 0.18);
    --menu-bg: #083349;
    --menu-link: #abd9ee;
    --menu-link-hover: #ffffff;
    --menu-text: #d2edf8;
    --button-bg: #2ea878;
    --button-border: #1e6f4f;
    --button-delete-bg: #de754f;
    --button-delete-border: #8a4129;
    --button-cancel-bg: #3487bd;
    --button-cancel-border: #205779;
}

body.theme-sepia {
    --bg: #f7f1e4;
    --text: #4c3b2a;
    --header-bg: #eadfca;
    --header-border: #cdbb97;
    --panel-border: #cdbb97;
    --footer-text: #7a6249;
    --input-bg: #fffaf0;
    --input-border: #c8b38a;
    --task-bg: #fff8e8;
    --task-border: #8c6b3f;
    --task-text: #4c3b2a;
    --stage-current: rgba(202, 131, 54, 0.2);
    --stage-ongoing: rgba(153, 136, 102, 0.2);
    --stage-backlog: rgba(125, 92, 61, 0.2);
    --menu-bg: #4b3a29;
    --menu-link: #e5d6bd;
    --menu-link-hover: #fff8ea;
    --menu-text: #f3e8d1;
    --button-bg: #88a164;
    --button-border: #55663b;
    --button-delete-bg: #c77f49;
    --button-delete-border: #7d4c28;
    --button-cancel-bg: #5f85b3;
    --button-cancel-border: #395372;
}

body > section, body > form, footer {
    width: 90%;
    margin: auto;
}

body {
    background: var(--bg);
    color: var(--text);
}

a {
    color: inherit;
}

header {
    margin: 0 0 2rem 0;
    padding: .1rem 1.5rem;
    background: var(--header-bg);
    border-bottom: 1px groove var(--header-border);
    text-align: left;
}

footer {
    font-size: .8rem;
    color: var(--footer-text);
    margin-top: 5rem;
    text-align: right;
}

form, h1 {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

form {
    position: relative;
}

h1 {
    margin: 0;
    font-size: 1.2em
}

input[type=text],
input[type=password],
input[type=tel],
input[type=email],
input[type=url],
input[type=search],
input[type=date],
select,
textarea {
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    appearance: none;

    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    border-radius: 5px;
    font: inherit;
    text-indent: 0.01em;
    text-overflow: "";
    line-height: 1;
    padding: 5px;
    border: 1px solid var(--input-border);
    background-color: var(--input-bg);
    color: var(--text);
    display: block;
    width: 100%;
    margin: .09em 0;
}

input[type=checkbox] {
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    appearance: none;
    background-color: var(--input-bg);
    width: 1.5em;
    height: 1.5em;
    border: 1px solid #bbb;
    border-radius: 2px;
    cursor: pointer;
    vertical-align: bottom
}

input[type=checkbox]:checked {
    background: #fff url(../imgs/check.svg) no-repeat;
    background-size: 100% 100%;
}

input::-webkit-inner-spin-button {
    display: none;
}

.txtright {
    text-align: right
}

.right {
    position: absolute;
    top: -1em;
    right: 0;
}

label {
    font-weight: bold;
}

#stage-label {
    font-weight: bold;
    float: left;
    margin-right: 1em;
}

.task-status {
    float: right;
    width: 3em !important;
    height: 3em !important;
}

.edit-button {
    float: right;
}

.hide-button {
    float: right;
}

button[type=button] {
    color: var(--button-text);
    font: inherit;
    background: var(--button-bg);
    border: 2px solid var(--button-border);
    display: block;
    border-radius: .5em;
    white-space: nowrap
}

[for=status] {
    cursor: pointer;
    font-style: italic
}

#save-button {
    float: left;
}

#delete-button {
    background-color: var(--button-delete-bg) !important;
    border: 2px solid var(--button-delete-border);
    float: left;
}

#cancel-button {
    background-color: var(--button-cancel-bg) !important;
    border: 2px solid var(--button-cancel-border);
    float: unset;
}

.add-button {
    float: left;
    width: 2em;
    height: 2em;
}

.search-form {

}

#find {
    width: calc(100% - 80px);
    overflow: hidden;
}

#search-button {
    width: 70px;
    float: right;
}


#task-table {
    table-layout: fixed;
    width: 100%;
	height: 100%;
}

#task-table > tbody, td {
	height: 100%;
	vertical-align: top;
}

.task-area {
    min-height: 50vh;
    border-radius: .5em;
    padding: .5em;
	height: 100%;
}

#current-tasks {
    background-color: var(--stage-current);
    z-index: -1;
}

#ongoing-tasks {
    background-color: var(--stage-ongoing);
}

#backlog-tasks {
    background-color: var(--stage-backlog);
}

.task {
    display: block;
    background-color: var(--task-bg) !important;
    border: var(--task-border) solid 2px;
    border-radius: .5em;
    padding: .3em;
    color: var(--task-text);
}

.overdue {
    background-color: var(--overdue-bg) !important;
    border: var(--overdue-border) solid 2px !important;
    color: var(--overdue-text) !important;
}

select {
    background-color: var(--input-bg);
    color: var(--text);
    background-image: url(../imgs/tri.svg);
    background-position: 98.5% center;
    background-repeat: no-repeat;
    background-size: 10px 11px;
    padding: 5px;
}

.hidden {
    display: none;
}

#list {
    border: 1px solid var(--panel-border);
    width: 100%;
    border-collapse: collapse;
    margin: auto;
}

#addNew{
    max-width: 50em !important;
}

.dont-break-out {

    /* These are technically the same, but use both */
    overflow-wrap: break-word;
    word-wrap: break-word;

    -ms-word-break: break-all;
    /* This is the dangerous one in WebKit, as it breaks things wherever */
    word-break: break-all;
    /* Instead use this non-standard one: */
    word-break: break-word;

    /* Adds a hyphen where the word breaks, if supported (No Blink) */
    -ms-hyphens: auto;
    -moz-hyphens: auto;
    -webkit-hyphens: auto;
    hyphens: auto;

}


.sidenav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: var(--menu-bg);
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 60px;
}

.sidenav a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    color: var(--menu-link);
    display: block;
    transition: 0.3s;
}

.sidenav a:hover {
    color: var(--menu-link-hover);
}

.settings-panel {
    padding: 8px 16px 8px 32px;
    color: var(--menu-text);
}

.settings-panel label {
    display: block;
    margin-bottom: 8px;
}

.settings-panel label + select + label {
    margin-top: 12px;
}

.settings-panel select {
    width: calc(100% - 16px);
}

.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
}

@media screen and (max-height: 450px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
}

#app-title {
    float: right;
    font-size: xx-large;
}

#import-file {
    display: none;
}

